[+] fix trim on transaction table to prevent the table columns from jumping around

--- a/src/sharedComponents/TransactionsTable/transactionsTable.scss
+++ b/src/sharedComponents/TransactionsTable/transactionsTable.scss
@@ -22,7 +22,8 @@
       }
     }
     .transaction-value {
-      width: 11.5rem;
+      max-width: 11.5rem;
+      min-width: 11.5rem;
     }
     .transaction-function {
       width: 10.5rem;
